# AMDM

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
amdm/: __init__.py  amdm.py  detectors.py  features.py  ingestion.py  labeling.py  metrics.py  semconv.py
docs/: CLI_REFERENCE.md  JSON_PAYLOAD.md
eval/: __init__.py  metrics.jsonl  offline_eval.py  realtime_demo.py  realtime_events.jsonl  state.json
examples/sample_traces/: agents_trace.jsonl  otel_trace.otel.jsonl
notebooks/: AMDM_explainer.md
sim/: __init__.py  generator.py  scenarios.yaml
tests/: test_amdm_math.py  test_detectors.py  test_ingestion_roundtrip.py  test_metrics.py  test_offline_eval_metrics.py
