[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amdm-agent-monitor"
version = "0.1.0"
description = "Adaptive Multi-Dimensional Monitoring for agentic systems with AMDM scoring, detectors, simulator, and evaluation harness."
authors = [
    {name = "AMDM Contributors"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=1.5",
    "scipy>=1.10",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "rich>=13.0",
    "tqdm>=4.65",
    "scikit-learn>=1.3",
    "tabulate>=0.9",
    "prometheus-client>=0.17"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-mock>=3.10"
]

[project.urls]
Repository = "https://example.com/amdm-agent-monitor"

[tool.setuptools.packages.find]
include = ["amdm", "sim", "eval"]
